--- a/package.json
+++ b/package.json
@@ -11,6 +11,16 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^1.6.0"
+    "astro": "^1.6.0",
+    "babel": "^6.23.0",
+    "highlight.js": "^11.6.0",
+    "prettier": "^2.7.1"
+  },
+  "devDependencies": {
+    "@astrojs/react": "^1.2.2",
+    "@types/prettier": "^2.7.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "yaml": "^2.1.3"
   }
 }
