--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   },
   "devDependencies": {
     "@astrojs/react": "^1.2.2",
+    "@mui/icons-material": "^5.10.9",
+    "@mui/lab": "^5.0.0-alpha.107",
+    "@mui/material": "^5.10.13",
     "@types/prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
