--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@types/golang-wasm-exec": "^1.15.0",
     "astro": "^1.6.0",
     "babel": "^6.23.0",
     "highlight.js": "^11.6.0"
