--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@ant-design/icons": "^4.7.0",
     "@astrojs/react": "^1.2.2",
     "antd": "^4.24.1",
+    "cheerio": "^1.0.0-rc.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "yaml": "^2.1.3"
