--- a/package.json
+++ b/package.json
@@ -22,10 +22,8 @@
     "@types/jsdom": "^20.0.1",
     "@types/node": "^18.11.9",
     "antd": "^4.24.1",
-    "cheerio": "^1.0.0-rc.12",
     "jsdom": "^20.0.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "yaml": "^2.1.3"
+    "react-dom": "^18.2.0"
   }
 }
