--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@ant-design/icons": "^4.7.0",
+    "@astrojs/partytown": "^1.0.1",
     "@astrojs/react": "^1.2.2",
     "@types/jsdom": "^20.0.1",
     "@types/node": "^18.11.9",
