--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kmtym1998/portfolio",
+  "name": "@kmtym1998/portfolio",
   "type": "module",
   "version": "0.0.1",
   "private": true,
