--- a/src/articlesConfig/config.json
+++ b/src/articlesConfig/config.json
@@ -37,6 +37,14 @@
       "urls": [],
       "articles": [
         {
+          "publishedDate": "2022-12-11",
+          "href": "https://tech.buysell-technologies.com/entry/adventcalendar2022-12-11"
+        },
+        {
+          "publishedDate": "2022-12-04",
+          "href": "https://tech.buysell-technologies.com/entry/adventcalendar2022-12-04"
+        },
+        {
           "publishedDate": "2022-07-29",
           "href": "https://tech.buysell-technologies.com/entry/2022/07/29/201648"
         },
