--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,8 +4,8 @@ on:
   push:
     branches: [main]
     paths:
-      - 'src/pages/**'
-      - 'public/**'
+      - 'src/**'
+
   workflow_dispatch:
 
 # Allow this job to clone the repo and create a page deployment
