--- a/src/configs/articles/config.json
+++ b/src/configs/articles/config.json
@@ -11,6 +11,10 @@
       ],
       "articles": [
         {
+          "publishedDate": "2022-12-25",
+          "href": "https://zenn.dev/kmtym1998/articles/202212250800"
+        },
+        {
           "publishedDate": "2022-10-09",
           "href": "https://zenn.dev/kmtym1998/articles/202210090118"
         },
